--- a/src/r/make_manuscript_figures.Rmd
+++ b/src/r/make_manuscript_figures.Rmd
@@ -31,40 +31,60 @@ filename = "D:/Analysis/EMT/data/Bulk Flux Intersection.csv"
 data = read_csv(filename)
 ```
 
-### B. Grab the top 50 reactions
+### B. Visualize the top 50 reaction knockouts from bulk/aggreggated studies
+Here's a description of each variable created:
+  * `top50`: Top 50 reactions ranked by priority score
+  * `bardata`: data used in Bar Plot
+  * `expt_data`: data used in discrete heatmap
+  
 ```{r}
+# Sort data by priority score
+data = data[order(data$`Absolute Effect * N expts`, decreasing=TRUE), ]
+
+# Grab top 50
 top50 = data[1:50, ]
-rxn_labels = top50[, 2]
+
+# Create new data for barplots and discrete heatmap
 bardata = top50[, 4]
 expt_data = top50[, 5]
-top50$name = paste0(top50$`Reaction Name`, 
+
+# Create new variable for row names
+top50$name = paste0(top50$`BiGG Reaction ID`, 
                     ', ',
                     top50$`KEGG Subsystem`)
 ```
 
 #### i. Reformat the data
+We're going to grab selected time points that have replicate values across multiple studies and tell the EMT story. 
+
+The selected time points will be stored in the `reformat_data` variable.
 ```{r}
 # Split by hours
-early_data = top50[, c("GSE17708_1hr", "Garcia_1hrs")]
-mid1_data = top50[, c("GSE17708_8hrs", "GSE147405_8hrs")]
-mid2_data = top50[, c("GSE17708_24hrs", "Garcia_24hrs", "GSE147405_24hrs")]
-late_data = top50[, c("GSE17708_72hrs", "GSE17518_72hrs", "Garcia_48hrs", 
-                       "Keshamouni_72hrs", "GSE147405_72hrs")]
-reformat_data = cbind(early_data, mid1_data, mid2_data, late_data)
-reformat_data = abs(reformat_data)
+early_data = abs(top50[, c("GSE17708_1hr", "Garcia_1hrs")])
+mid1_data  = abs(top50[, c("GSE17708_8hrs", "GSE147405_8hrs")])
+mid2_data  = abs(top50[, c("GSE17708_24hrs", "Garcia_24hrs", "GSE147405_24hrs")])
+late_data  = abs(top50[, c("GSE17708_72hrs", "GSE17518_72hrs", "Garcia_48hrs", 
+                       "Keshamouni_72hrs", "GSE147405_72hrs")])
 ```
 
-#### ii. Create the column annotation bar for each time-point
+#### ii. Create the column annotation heatmap for each time-point
 ```{r}
-all_col = HeatmapAnnotation(EMT=c("01hr", "01hr",
-                              "08hrs", "08hrs",
-                              "24hrs", "24hrs", "24hrs",
-                              "72hrs", "72hrs", "72hrs", "72hrs", "72hrs"),
-                            col=list(EMT=c("01hr"="#CAC4CE", 
-                                           "08hrs"="#8D86C9",
-                                           "24hrs"="#725AC1",
-                                           "72hrs"="#242038")),
-                            gp = gpar(col = NA))
+h1_col = HeatmapAnnotation(h1=anno_block(gp=gpar(fill="#CAC4CE"),
+                                      labels=c("Early"), 
+                                      labels_gp=gpar(col="black", 
+                                                     fontsize=10)))
+h2_col = HeatmapAnnotation(h2=anno_block(gp=gpar(fill="#8D86C9"),
+                                      labels=c("Int. 1"), 
+                                      labels_gp=gpar(col="white", 
+                                                     fontsize=10)))
+h3_col = HeatmapAnnotation(h3=anno_block(gp=gpar(fill="#725AC1"),
+                                      labels=c("Int. 2"), 
+                                      labels_gp=gpar(col="white", 
+                                                     fontsize=10)))
+h4_col = HeatmapAnnotation(h4=anno_block(gp=gpar(fill="#242038"),
+                                      labels=c("Late"), 
+                                      labels_gp=gpar(col="white", 
+                                                     fontsize=10)))
 ```
 
 #### iii. Create the barplot that shows the priority score
@@ -80,71 +100,65 @@ bp = rowAnnotation(
 ```{r, fig.width=10, fig.height=7.5}
 hm = Heatmap(as.matrix(expt_data),
              col = colorRamp2(c(1,5), 
-                              c("#FFFFFF", "#95C623")),
-             heatmap_legend_param=list(title="Expts",
-                                       color_bar="discrete"))
-```
-#### v. Create a annotation bar for KEGG subsystems
-```{r}
-tmp = unique(pathway)
-kegg_subsys = rowAnnotation(Pathway=pathway,
-                            col=list(EMT=c("NA"="#484041", 
-                                           "Taurine and hypotaurine metabolism"="#434371",
-                                           "Galactose metabolism"="#79AEA3",
-                                           "Glutamate metabolism"="#70EE9C",
-                                           "R Group Synthesis"="#B5F44A",
-                                           "Fatty acid activation"="#004777",
-                                           "Pyrimidine Catabolism"="#A30000",
-                                           "Nucleotides"="#FF7700",
-                                           "Citric Acid Cycle"="#EFD28D",
-                                           "Propanoate Metabolism"="#00AFB5",
-                                           "Pyruvate Metabolism"="#FFC800",
-                                           "Glycolysis/Gluconeogenesis"="#1E212B",
-                                           "Transport, Mitochondrial"="#AF3E4D",
-                                           "Pentose Phosphate Pathway"="#56E39F",
-                                           "Transport, Extracellular"="#2A1F2D",
-                                           "Alanine and Aspartate Metabolism"="#B81365",
-                                           "Fatty acid elongation"="#055864",
-                                           "Methionine Metabolism"="#B9BAA3",
-                                           "Carnitine shuttle"="#484041")
-                                     )
-                            )
+                              c("Gray", "#95C623")),
+             heatmap_legend_param=list(title="Experiments",
+                                       color_bar="discrete"), 
+             width = ncol(expt_data)*unit(5, "mm"), 
+             height = nrow(expt_data)*unit(5, "mm"))
 ```
 
-
-#### vi. Create the Heatmap with additional figures
-```{r}
-# OPTIONAL: CHANGE THE TEXT FORMAT
-#ht_opt(heatmap_column_names_gp = gpar(fontfamily = "TT Arial"), 
-#       heatmap_row_names_gp = gpar(fontfamily = "TT Arial"), 
-#       heatmap_column_title_gp = gpar(fontfamily = "TT Arial"),
-#       heatmap_row_title_gp = gpar(fontfamily = "TT Arial"),
-#       legend_title_gp = gpar(fontfamily = "TT Arial"),
-#       legend_labels_gp = gpar(fontfamily = "TT Arial"))
-final_data = as.matrix(reformat_data)
-rownames(final_data) = top50$name
-ht = Heatmap(row_names_side="left",
-             final_data, 
-             bottom_annotation=all_col,
+#### v. Create the figure
+```{r, fig.width=20, fig.height=12.5, fig.align='right', dpi=100}
+col_fun = colorRamp2(c(0, 5, 20), 
+                     c("Gray", "#FD7470", "#DC1C13"))
+h1 = Heatmap(row_labels=top50$name,
+             row_names_side="left",
+             early_data, 
+             col=col_fun, 
              cluster_columns=FALSE,
              cluster_rows=FALSE,
-             col = colorRamp2(c(0, 20), 
-                              c("white", "red")),
-             heatmap_legend_param=list(title="Flux")) +
-     hm + 
-     bp
+             show_heatmap_legend=FALSE,
+             bottom_annotation=h1_col, 
+             width = ncol(early_data)*unit(5, "mm"), 
+             height = nrow(early_data)*unit(5, "mm"))
+h2 = Heatmap(mid1_data, 
+             col=col_fun, 
+             cluster_columns=FALSE,
+             cluster_rows=FALSE,
+             show_heatmap_legend=FALSE,
+             bottom_annotation=h2_col, 
+             width = ncol(mid1_data)*unit(5, "mm"), 
+             height = nrow(mid1_data)*unit(5, "mm"))
+h3 = Heatmap(mid2_data, 
+             col=col_fun, 
+             cluster_columns=FALSE,
+             cluster_rows=FALSE,
+             show_heatmap_legend=FALSE,
+             bottom_annotation=h3_col, 
+             width = ncol(mid2_data)*unit(5, "mm"), 
+             height = nrow(mid2_data)*unit(5, "mm"))
+h4 = Heatmap(late_data, 
+             col=col_fun, 
+             cluster_columns=FALSE,
+             cluster_rows=FALSE,
+             show_heatmap_legend=TRUE,
+             bottom_annotation=h4_col,
+             width = ncol(late_data)*unit(5, "mm"), 
+             height = nrow(late_data)*unit(5, "mm"),
+             heatmap_legend_param=list(title="Absolute Flux"))
+
+final_figure = h1+h2+h3+h4+hm+bp
+final_figure
 ```
 
-#### vi. Save the figure to file
-```{r, fig.height=10, fig.width=10}
+```{r}
 png(filename="D:/Analysis/EMT/figures/RECON1_flux_heatmap.png",
-       width=10,
-       height=10,
+       width=20,
+       height=12.5,
        units='in',
     res=1200)
-ht
+final_figure
 dev.off()
-  
 ```
 
 ### C. Visualize Glycolytic Reactions
@@ -152,16 +166,51 @@ Now let's specifically get reactions related to Glycolysis.
 
 #### i. Reformat the data
 ```{r}
-idx = (pathway == "Glycolysis/Gluconeogenesis")
+idx = (top50$`KEGG Subsystem` == "Glycolysis/Gluconeogenesis")
 idx[is.na(idx)] = FALSE
-glycolysis_data = reformat_data[idx, ]
-glycolysis_labels = top50[idx, 2]
-bardata = top50[idx, 4]
+glycolysis_data = top50[idx, ]
+glycolysis_labels = glycolysis_data$name
+
+# Create new data for barplots and discrete heatmap
+bardata = glycolysis_data[, 4]
 bardata[is.na(bardata)] = 0
-expt_data = top50[idx, 5]
+expt_data = glycolysis_data[, 5]
 ```
 
-#### ii. Create the barplot that shows the priority score
+#### i. Reformat the data
+We're going to grab selected time points that have replicate values across multiple studies and tell the EMT story. 
+
+The selected time points will be stored in the `reformat_data` variable.
+```{r}
+# Split by hours
+early_data = abs(glycolysis_data[, c("GSE17708_1hr", "Garcia_1hrs")])
+mid1_data  = abs(glycolysis_data[, c("GSE17708_8hrs", "GSE147405_8hrs")])
+mid2_data  = abs(glycolysis_data[, c("GSE17708_24hrs", "Garcia_24hrs", "GSE147405_24hrs")])
+late_data  = abs(glycolysis_data[, c("GSE17708_72hrs", "GSE17518_72hrs", "Garcia_48hrs", 
+                                   "Keshamouni_72hrs", "GSE147405_72hrs")])
+```
+
+#### ii. Create the column annotation heatmap for each time-point
+```{r}
+h1_col = HeatmapAnnotation(h1=anno_block(gp=gpar(fill="#CAC4CE"),
+                                      labels=c("Early"), 
+                                      labels_gp=gpar(col="black", 
+                                                     fontsize=10)))
+h2_col = HeatmapAnnotation(h2=anno_block(gp=gpar(fill="#8D86C9"),
+                                      labels=c("Int. 1"), 
+                                      labels_gp=gpar(col="white", 
+                                                     fontsize=10)))
+h3_col = HeatmapAnnotation(h3=anno_block(gp=gpar(fill="#725AC1"),
+                                      labels=c("Int. 2"), 
+                                      labels_gp=gpar(col="white", 
+                                                     fontsize=10)))
+h4_col = HeatmapAnnotation(h4=anno_block(gp=gpar(fill="#242038"),
+                                      labels=c("Late"), 
+                                      labels_gp=gpar(col="white", 
+                                                     fontsize=10)))
+```
+
+#### iii. Create the barplot that shows the priority score
 ```{r}
 bp = rowAnnotation(
   Priority=anno_barplot(
@@ -174,38 +223,62 @@ bp = rowAnnotation(
 ```{r, fig.width=10, fig.height=7.5}
 hm = Heatmap(as.matrix(expt_data),
              col = colorRamp2(c(1,5), 
-                              c("#FFFFFF", "#95C623")),
-             heatmap_legend_param=list(title="Expts",
-                                       color_bar="discrete"))
+                              c("Gray", "#95C623")),
+             heatmap_legend_param=list(title="Experiments",
+                                       color_bar="discrete"), 
+             width = ncol(expt_data)*unit(5, "mm"), 
+             height = nrow(expt_data)*unit(5, "mm"))
 ```
 
-#### v. Create the Heatmap with additional figures
-```{r}
-# OPTIONAL: CHANGE THE TEXT FORMAT
-#ht_opt(heatmap_column_names_gp = gpar(fontfamily = "TT Arial"), 
-#       heatmap_row_names_gp = gpar(fontfamily = "TT Arial"), 
-#       heatmap_column_title_gp = gpar(fontfamily = "TT Arial"),
-#       heatmap_row_title_gp = gpar(fontfamily = "TT Arial"),
-#       legend_title_gp = gpar(fontfamily = "TT Arial"),
-#       legend_labels_gp = gpar(fontfamily = "TT Arial"))
-final_data = as.matrix(glycolysis_data)
-rownames(final_data) = top50$`Reaction Name`[idx]
-ht = Heatmap(final_data, 
-             top_annotation=all_col,
+#### v. Create the figure
+```{r, fig.width=20, fig.height=12.5, fig.align='right', dpi=100}
+col_fun = colorRamp2(c(0, 5, 20), 
+                     c("Gray", "#FD7470", "#DC1C13"))
+h1 = Heatmap(row_labels=glycolysis_data$name,
+             row_names_side="left",
+             early_data, 
+             col=col_fun, 
              cluster_columns=FALSE,
-             cluster_rows=TRUE,
-             col = colorRamp2(c(0, 20), c("white", "red")),
-             heatmap_legend_param=list(title="Flux")) + 
-     rowAnnotation(rn = anno_text(rownames(final_data))) +
-     hm + 
-     bp
+             cluster_rows=FALSE,
+             show_heatmap_legend=FALSE,
+             bottom_annotation=h1_col, 
+             width = ncol(early_data)*unit(5, "mm"), 
+             height = nrow(early_data)*unit(5, "mm"))
+h2 = Heatmap(mid1_data, 
+             col=col_fun, 
+             cluster_columns=FALSE,
+             cluster_rows=FALSE,
+             show_heatmap_legend=FALSE,
+             bottom_annotation=h2_col, 
+             width = ncol(mid1_data)*unit(5, "mm"), 
+             height = nrow(mid1_data)*unit(5, "mm"))
+h3 = Heatmap(mid2_data, 
+             col=col_fun, 
+             cluster_columns=FALSE,
+             cluster_rows=FALSE,
+             show_heatmap_legend=FALSE,
+             bottom_annotation=h3_col, 
+             width = ncol(mid2_data)*unit(5, "mm"), 
+             height = nrow(mid2_data)*unit(5, "mm"))
+h4 = Heatmap(late_data, 
+             col=col_fun, 
+             cluster_columns=FALSE,
+             cluster_rows=FALSE,
+             show_heatmap_legend=TRUE,
+             bottom_annotation=h4_col,
+             width = ncol(late_data)*unit(5, "mm"), 
+             height = nrow(late_data)*unit(5, "mm"),
+             heatmap_legend_param=list(title="Absolute Flux"))
+
+final_figure = h1+h2+h3+h4+hm+bp
+final_figure
 ```
 
 #### vi. Save the figure to file
 ```{r}
 png(filename="D:/Analysis/EMT/figures/glycolysis_flux_heatmap.png",
-       width=10,
-       height=5,
+       width=20,
+       height=12.5,
        units='in',
     res=1200)
 ht
